Trying to solve 100vh on mobile devices problem [2]

--- a/styles.css
+++ b/styles.css
@@ -23,23 +23,19 @@
 
 html {
   overflow: hidden;
-  height: 100%;
-  width: 100%;
 }
 
 body {
   background-color: #b0e3ff79;
   font-family: "Calibri";
-  height: 100%;
-  width: 100%;
 }
 
 main {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 #header,
